--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "famous-polyfills": "^0.2.2",
     "url-loader": "^0.5.5",
     "webpack-dev-server": "^1.4.10"
+  },
+  "dependencies": {
+    "jschan": "0.0.3"
   }
 }
